--- a/wizard/css/style.css
+++ b/wizard/css/style.css
@@ -3,9 +3,11 @@
 
 :root
 
-body {
-    background-image: linear-gradient(to bottom right, #5F9EA0, #006400);
-}  
+    body {
+ background-image: url("paper.gif");
+ background-color: #cccccc;
+}
+ 
 *
 {
     color: #c2a5a5;
