--- a/wizard/css/style.css
+++ b/wizard/css/style.css
@@ -4,7 +4,7 @@
 :root
 
     body {
- background-image: url("paper.gif");
+ background-image: url("images/ironmanprofile.jpeg");
  background-color: #cccccc;
 }
  
